reference fix in presentation

--- a/Presentation.ipynb
+++ b/Presentation.ipynb
@@ -32,7 +32,9 @@
         "\n",
         ">>>> Irkutsk State University\n",
         "\n",
-        ">>>> Irkutsk, Russia, June, 2022"
+        ">>>> Irkutsk, Russia, June, 2022\n",
+        "\n",
+        "https://github.com/berng/WrappedClassifier"
       ],
       "metadata": {
         "id": "ePvyVIe7dXZt"
